orchestrator/manifests/elohim-app/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elohim-site-ingress
  namespace: elohim-prod
  labels:
    app.kubernetes.io/name: elohim-site
    app.kubernetes.io/instance: elohim-site-prod
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: elohim
    app.kubernetes.io/managed-by: jenkins
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: public
  rules:
  - host: elohim.host
    http:
      paths:
      - backend:
          service:
            name: elohim-site-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - elohim.host
    secretName: elohim-site-tls-cert
